--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,13 +26,13 @@ html{
     margin-top: 32px !important;
 }
 .row{
-    margin-left: -8px;
-    margin-right: -8px;
+    margin-left: -8px !important;
+    margin-right: -8px !important;
 }
 .col{
-    float:left;
-    padding-left: 8px;
-    padding-right: 8px;
+    float:left !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
 }
 .col-third{
     width: 33.33333%; 
@@ -113,10 +113,14 @@ html{
 }
 #slider {
     position: relative;
-    margin-top: 46px;
-    padding-top: 50%;
-    background: url("./img/slider/slider1.jpg") top center / cover no-repeat;
+    /* margin-top: 46px;
+    padding-top: 50%; */
+    /* background: url("./img/slider/slider1.jpg") top center / cover no-repeat; */
 }
+#slider img{
+    width: 100%;
+}
+
 #header .search-icon{
     color: #fff;
 }
@@ -153,7 +157,7 @@ html{
 }
 #slider .text-content{
     position: absolute;
-    bottom: 46px;
+    bottom: 46px; 
     color:#fff;
     /* left: 50%;
     transform:translateX(-50%) ; */
